<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <include
        android:id="@+id/include"
        layout="@layout/layout_title" />
    <EditText
        android:id="@+id/et_account_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_131"
        android:layout_below="@+id/include"
        android:layout_marginLeft="@dimen/px_44"
        android:layout_marginRight="@dimen/px_44"
        android:layout_marginTop="@dimen/px_44"
        android:hint="@string/shoujihao"
        android:paddingLeft="@dimen/px_22"
        android:inputType="number"
        android:textColor="@color/text_2"
        android:textSize="@dimen/text_small_l"
        android:digits="1234567890."
        android:maxLength="11"
        android:singleLine="true"
        android:background="@drawable/bg_edittext_normal"
        />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_131"
        android:layout_below="@+id/et_account_name"
        android:layout_marginTop="@dimen/px_22"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_vcode_content"
            android:layout_width="@dimen/view_0"
            android:layout_height="@dimen/px_131"
            android:layout_marginLeft="@dimen/px_44"
            android:layout_marginRight="@dimen/px_44"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/yanzhengma"
            android:paddingLeft="@dimen/px_22"
            android:textColor="@color/text_2"
            android:textSize="@dimen/text_small_l"
            android:digits="1234567890."
            android:singleLine="true"
            android:background="@drawable/bg_edittext_normal"
            />

        <com.thinkcoo.mobile.presentation.views.component.CountDownButton
            android:id="@+id/btn_request_vcode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_131"
            android:layout_marginRight="@dimen/px_44"
            android:background="@drawable/selector_shape_round_blue"
            android:text="@string/obtain_vcode"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_l" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_131"
        android:text="@string/xiayibu"
        android:background="@drawable/selector_shape_round_blue"
        android:textColor="@color/white"
        android:layout_below="@+id/layout"
        android:layout_marginTop="@dimen/px_109"
        android:layout_marginLeft="@dimen/px_44"
        android:layout_marginRight="@dimen/px_44"
        />

</RelativeLayout>