<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".presentation.views.activitys.AddResourceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/blue_title"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/tittle_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:padding="10dp"
   />

        <EditText
            android:id="@+id/et_search_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/px_20"
            android:hint="@string/search_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/ib_search"
            android:padding="@dimen/px_44"
            android:src="@mipmap/search_icon"
            android:layout_width="48dp"
            android:background="@color/blue_title"
            android:layout_height="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:background="#ddffffff"
        android:layout_height="match_parent">
        <Button
            android:gravity="center"
            android:id="@+id/btn_upload"
            android:padding="@dimen/px_10"
            android:text="@string/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_add"
            android:text="@string/add"
            android:padding="@dimen/px_10"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>